--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -190,7 +190,7 @@
     margin-bottom:25px ;
     margin-left: -50px;
   }
-  .contact{
+  .nav .contact{
     padding-right: 30px;
   }
 }
